@@ -5,13 +5,13 @@ use warnings;
 
 use Test::More;
 
-use Crypt::Passphrase::PBKDF2;
+use Crypt::Passphrase;
 
 my $passphrase = Crypt::Passphrase->new(
 	encoder => {
 		module     => 'PBKDF2',
 		type       => 'sha256',
-		iterations => 8000,
+		iterations => 6400,
 	},
 );
 
@@ -22,11 +22,11 @@ my $hash1 = $passphrase->hash_password($password);
 ok($passphrase->verify_password($password, $hash1), 'Self-generated password validates');
 ok(!$passphrase->needs_rehash($hash1), 'Self-generated password doesn\'t need to be regenerated');
 
-my $hash2 = '$pbkdf2-sha256$6400$0ZrzXitFSGltTQnBWOsdAw$Y11AchqV4b0sUisdZd0Xr97KWoymNE0LNNrnEgY4H9M';
+my $hash2 = '$pbkdf2-sha256$6400$.6UI/S.nXIk8jcbdHx3Fhg$98jZicV16ODfEsEZeYPGHU3kbrUrvUEXOPimVSQDD44';
 ok($passphrase->verify_password($password, $hash2), 'Externally created password verifies');
-ok($passphrase->needs_rehash($hash2), 'Externally created password doesn\'t need rehash');
+ok(!$passphrase->needs_rehash($hash2), 'Externally created password doesn\'t need rehash');
 
-my $hash3 = '$pbkdf2-sha256$6400$.6UI/S.nXIk8jcbdHx3Fhg$98jZicV16ODfEsEZeYPGHU3kbrUrvUEXOPimVSQDD44';
+my $hash3 = '$pbkdf2-sha256$8000$XAuBMIYQQogxRg$tRRlz8hYn63B9LYiCd6PRo6FMiunY9ozmMMI3srxeRE';
 ok($passphrase->verify_password($password, $hash3), 'Externally created password with reduced rounds verifies');
 ok($passphrase->needs_rehash($hash3), 'Password with reduced salt does need rehash');
 
