@@ -1,6 +1,7 @@
 Revision history for Crypt-Passphrase-PBKDF2
 
 {{$NEXT}}
+          - Fix needs_rehash tests
 
 0.003     2025-08-27 10:31:49+02:00 Europe/Brussels
           - Fix crypt_types() subroutine name
